--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ attrs==25.3.0
 beautifulsoup4==4.13.4
 certifi==2025.4.26
 charset-normalizer==3.4.2
+colorama==0.4.6
 frozenlist==1.6.0
 idna==3.10
 iw4m==0.4.0
