--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@ __pycache__/
 # C extensions
 *.so
 
-*.json
-
 # Distribution / packaging
 .Python
 build/
@@ -180,7 +178,4 @@ cython_debug/
 #  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
-.cursorindexingignore
-*.json
-*.json
-test.py
+.cursorindexingignor
