--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 aiohappyeyeballs==2.6.1
-aiohttp==3.12.9
-aiosignal==1.3.2
+aiohttp==3.12.15
+aiosignal==1.4.0
 attrs==25.3.0
 beautifulsoup4==4.13.4
-certifi==2025.4.26
+certifi==2025.8.3
 charset-normalizer==3.4.2
-frozenlist==1.6.2
+frozenlist==1.7.0
+gsc_events==0.1.0
 idna==3.10
-iw4m==0.4.6
-multidict==6.4.4
-propcache==0.3.1
-requests==2.32.3
+iw4m==0.4.8
+multidict==6.6.3
+propcache==0.3.2
+requests==2.32.4
 soupsieve==2.7
-typing_extensions==4.14.0
-urllib3==2.4.0
-yarl==1.20.0
+typing_extensions==4.14.1
+urllib3==2.5.0
+yarl==1.20.1
